# din743

./: .gitignore  README.md  __init__.py  pyproject.toml
din743/: __init__.py  din743_1.py  din743_2.py  din743_3.py
examples/: example_1.py
tests/: test_1.py
