[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "din743"
version = "0.1.0"
description = "Implementation of DIN 743 - Calculation of load capacity of shafts and axles"
readme = "README.md"
license = {file = "LICENSE.txt"}
authors = [{name = "hanslhansl", email = "p4u1_1@posteo.at"}]
dependencies = [
    "colorama"
]

[tool.setuptools]
packages = ["din743"]